Plot coeficient directions and effects

--- a/04-linear-regression/05-local-interpretability-statsmodels.ipynb
+++ b/04-linear-regression/05-local-interpretability-statsmodels.ipynb
@@ -97,9 +97,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "## Coefficients direction (sign)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coefficients value\n",
+    "\n",
+    "pd.Series(results.params, index=X_train.columns).plot.bar(\n",
+    "    yerr=pd.Series(results.bse))\n",
+    "\n",
+    "plt.ylabel(\"Coefficients' value\")\n",
+    "plt.title(\"Coefficients\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9",
+   "metadata": {},
+   "source": [
+    "## Effect plots\n",
+    "\n",
+    "The effect is the coefficient multiplied by the feature value. Doing this for each observation can give a better understanding of the contribution of each feature to the target."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# multiply the coefficients by the feature values\n",
+    "effects = results.params * X_test\n",
+    "\n",
+    "# plot the effects\n",
+    "effects.boxplot(figsize=(8,6))\n",
+    "plt.ylabel(\"Effects (coeff x feature)\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": []
