Import packages + Load, split, & scale data

--- a/04-linear-regression/06-multicolinearity.ipynb
+++ b/04-linear-regression/06-multicolinearity.ipynb
@@ -16,6 +16,75 @@
    "id": "1",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Packages\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# the dataset for the demo\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.feature_selection import f_regression, r_regression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2",
+   "metadata": {},
+   "source": [
+    "## Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the California House price data from Scikit-learn\n",
+    "X, y = fetch_california_housing(return_X_y=True, as_frame=True)\n",
+    "X = X.drop(columns = [\"Latitude\", \"Longitude\"])\n",
+    "\n",
+    "# Split data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.3, random_state=0,\n",
+    ")\n",
+    "\n",
+    "# Scale data\n",
+    "scaler = MinMaxScaler().set_output(transform=\"pandas\").fit(X_train)\n",
+    "X_train = scaler.transform(X_train)\n",
+    "X_test = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('X_train shape: ', X_train.shape)\n",
+    "print('y_train shape: ', y_train.shape)\n",
+    "print('X_test shape: ', X_test.shape)\n",
+    "print('y_test shape: ', y_test.shape)\n",
+    "print()\n",
+    "\n",
+    "print('5 first rows in X_train:')\n",
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
