Compute and plot heatmap of correlation matrix

--- a/04-linear-regression/06-multicolinearity.ipynb
+++ b/04-linear-regression/06-multicolinearity.ipynb
@@ -80,9 +80,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5",
+   "metadata": {},
+   "source": [
+    "## Correlation\n",
+    "\n",
+    "Let's determine the correlation among the predictors."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We calculate the correlations using pandas corr()\n",
+    "# and we round the values to 2 decimals.\n",
+    "correlation_matrix = X_train.corr().round(2)\n",
+    "\n",
+    "# Plot the correlation matrix using seaborn.\n",
+    "# We use annot = True to print the correlation values\n",
+    "# inside the squares.\n",
+    "\n",
+    "figure = plt.figure(figsize=(8, 8))\n",
+    "sns.heatmap(data=correlation_matrix, annot=True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "We see that `AveRooms` and `AveBdrms`, as expected, are highly correlated.\n",
+    "There is also some correlation between `AveRooms` and the `MedInc` of the `HouseAge` and `Population`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": []
