--- a/04-linear-regression/06-multicolinearity.ipynb
+++ b/04-linear-regression/06-multicolinearity.ipynb
@@ -118,9 +118,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8",
+   "metadata": {},
+   "source": [
+    "## Train a linear regression model with StatsModels"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The model needs an intercept so we add a column of 1s:\n",
+    "\n",
+    "X_train = sm.add_constant(X_train)\n",
+    "X_test = sm.add_constant(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit model\n",
+    "\n",
+    "linreg = sm.OLS(y_train, X_train)\n",
+    "results = linreg.fit()\n",
+    "print(results.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": []
