Visualize direction of the coefficients

--- a/04-linear-regression/06-multicolinearity.ipynb
+++ b/04-linear-regression/06-multicolinearity.ipynb
@@ -153,9 +153,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11",
+   "metadata": {},
+   "source": [
+    "## Coefficients direction (sign)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coefficients value\n",
+    "\n",
+    "pd.Series(results.params, index=X_train.columns).plot.bar(\n",
+    "    yerr=pd.Series(results.bse))\n",
+    "\n",
+    "plt.ylabel(\"Coefficients' value\")\n",
+    "plt.title(\"Coefficients\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13",
+   "metadata": {},
+   "source": [
+    "Even though the variables `AveRooms` and `AveBdrms` are highly correlated, they show different directions in their contribution toward the target variable, and this is because of the correlation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": []
