--- a/04-linear-regression/06-multicolinearity.ipynb
+++ b/04-linear-regression/06-multicolinearity.ipynb
@@ -186,11 +186,97 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "14",
    "metadata": {},
+   "source": [
+    "## Scatter plots\n",
+    "\n",
+    "Let's explore the true relationship between `AveRooms` and `AveBdrms` and the target."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 4), dpi=80)\n",
+    "\n",
+    "plt.subplot(1, 3, 1)\n",
+    "plt.scatter(X_train['AveRooms'], y_train, marker=\"o\")\n",
+    "plt.xlabel('Number of rooms')\n",
+    "plt.ylabel('House price')\n",
+    "\n",
+    "plt.subplot(1, 3, 2)\n",
+    "plt.plot(X_train['AveBedrms'], y_train,marker=\"o\", ls=\"\")\n",
+    "plt.xlabel('Number of bedrooms')\n",
+    "plt.ylabel('House price')\n",
+    "\n",
+    "plt.subplot(1, 3, 3)\n",
+    "plt.plot(X_train['AveBedrms'], X_train['AveRooms'], marker=\"o\", ls=\"\")\n",
+    "plt.xlabel('Number of bedrooms')\n",
+    "plt.ylabel('Number of rooms')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16",
+   "metadata": {},
+   "source": [
+    "It is hard to see a clear association between `AveRooms` and `AveBdrms` and the target, but if anything else, by eye it looks very similar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17",
+   "metadata": {},
+   "source": [
+    "## Correlation with the target\n",
+    "\n",
+    "Let's then calculate the correlation coefficient and its significance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pearson's correlation coefficient\n",
+    "\n",
+    "r_regression(X_train[['AveRooms', 'AveBedrms']], y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Significance\n",
+    "\n",
+    "f_regression(X_train[['AveRooms', 'AveBedrms']], y_train)[1:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20",
+   "metadata": {},
+   "source": [
+    "There is a positive association between the number of rooms and the house price, that is also significant.\n",
+    "There is almost no association between the number of bedrooms and the house price."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21",
+   "metadata": {},
    "source": []
   }
  ],
