Train a model & visualize coefficients without one collinear feature.

--- a/04-linear-regression/06-multicolinearity.ipynb
+++ b/04-linear-regression/06-multicolinearity.ipynb
@@ -277,6 +277,69 @@
    "cell_type": "markdown",
    "id": "21",
    "metadata": {},
+   "source": [
+    "## Remove correlated variable\n",
+    "\n",
+    "Let's remove one of the correlated variables and re-train the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = X_train.drop(columns=['AveBedrms'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train a new model, without a highly correlated feature - AveBedrms\n",
+    "\n",
+    "linreg = sm.OLS(y_train, X_train)\n",
+    "results = linreg.fit()\n",
+    "print(results.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize the coefficient values\n",
+    "\n",
+    "pd.Series(results.params, index=X_train.columns).plot.bar(\n",
+    "    yerr=pd.Series(results.bse))\n",
+    "\n",
+    "plt.ylabel(\"Coefficients' value\")\n",
+    "plt.title(\"Coefficients\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25",
+   "metadata": {},
+   "source": [
+    "We still see that the number of bedrooms contributes negatively to the house price, even though it is positively correlated.\n",
+    "\n",
+    "This is probably because it is correlated to `MedInc` and there is also some degree of correlation among other variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
