Examine correlation of each feature on the target, individually

--- a/04-linear-regression/06-multicolinearity.ipynb
+++ b/04-linear-regression/06-multicolinearity.ipynb
@@ -335,9 +335,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "26",
+   "metadata": {},
+   "source": [
+    "## Correlation between predictors and target\n",
+    "\n",
+    "Let's examine each variable individually."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 4), dpi=80)\n",
+    "\n",
+    "plt.subplot(1, 5, 1)\n",
+    "plt.scatter(X_train['MedInc'], y_train, marker=\"o\")\n",
+    "plt.xlabel('Median income')\n",
+    "plt.ylabel('House price')\n",
+    "\n",
+    "plt.subplot(1, 5, 2)\n",
+    "plt.plot(X_train['HouseAge'], y_train,marker=\"o\", ls=\"\")\n",
+    "plt.xlabel('House age')\n",
+    "plt.ylabel('House price')\n",
+    "\n",
+    "plt.subplot(1, 5, 3)\n",
+    "plt.scatter(X_train[ 'AveRooms'], y_train, marker=\"o\")\n",
+    "plt.xlabel('Number of rooms')\n",
+    "plt.ylabel('House price')\n",
+    "\n",
+    "plt.subplot(1, 5, 4)\n",
+    "plt.plot(X_train['Population'], y_train,marker=\"o\", ls=\"\")\n",
+    "plt.xlabel('Population')\n",
+    "plt.ylabel('House price')\n",
+    "\n",
+    "plt.subplot(1, 5, 5)\n",
+    "plt.plot(X_train['AveOccup'], y_train,marker=\"o\", ls=\"\")\n",
+    "plt.xlabel('Occupancy')\n",
+    "plt.ylabel('House price');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coefficients\n",
+    "\n",
+    "coeffs = r_regression(X_train.drop(columns=[\"const\"]), y_train)\n",
+    "coeffs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# p values\n",
+    "\n",
+    "p_values = f_regression(X_train.drop(columns=[\"const\"]), y_train)[1]\n",
+    "p_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coeff_df = pd.DataFrame(\n",
+    "    {\"corr_coef\": coeffs, \"p_values\": p_values}, index=X_train.columns[1:])\n",
+    "\n",
+    "coeff_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31",
+   "metadata": {},
+   "source": [
+    "The contribution of `Population` and `AveOccup` seems to be negligible to the house price. If anything else, they have a negative association.\n",
+    "\n",
+    "However, in the model they show a positive contribution towards the target variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": []
