Examine correlation between MedInc, AveRooms, and target

--- a/04-linear-regression/06-multicolinearity.ipynb
+++ b/04-linear-regression/06-multicolinearity.ipynb
@@ -434,6 +434,99 @@
    "id": "32",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Let's remove those variables\n",
+    "\n",
+    "X_train = X_train.drop(columns=['Population', \"AveOccup\"])\n",
+    "\n",
+    "linreg = sm.OLS(y_train, X_train)\n",
+    "results = linreg.fit()\n",
+    "print(results.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33",
+   "metadata": {},
+   "source": [
+    "We see that there is no decrease in R2 after removing those variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coefficients value\n",
+    "\n",
+    "pd.Series(results.params, index=X_train.columns).plot.bar(\n",
+    "    yerr=pd.Series(results.bse))\n",
+    "\n",
+    "plt.ylabel(\"Coefficients' value\")\n",
+    "plt.title(\"Coefficients\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(X_train['MedInc'], X_train[\"AveRooms\"], marker=\"o\")\n",
+    "plt.xlabel('Median income')\n",
+    "plt.ylabel('AveRooms');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36",
+   "metadata": {},
+   "source": [
+    "What seems to be happening is that for greater `MedInc` values, and hence higher house prices, there don't seem to be houses with more rooms. And the number of rooms seems to be taking the price down after accounting for the median income."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 8), dpi=80)\n",
+    "\n",
+    "sns.scatterplot(\n",
+    "    x=X_train['MedInc'],\n",
+    "    y=y_train,\n",
+    "    hue=pd.qcut(X_train[\"AveRooms\"], 5),\n",
+    "    );"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20), dpi=80)\n",
+    "\n",
+    "sns.jointplot(\n",
+    "    x=X_train['MedInc'],\n",
+    "    y=y_train,\n",
+    "    hue=pd.qcut(X_train[\"AveRooms\"], 3),\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
